dataset1235/2025-2/805158916/users/4259475193/executions/3435325918_3974737893.log
== RUN (2025-09-03 15:30:07)
-- CODE: 
x= int(input())
y=int(input())

if x % y == 0:
int(input(x//y))
print("sim")
else:
print("nao")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
-- ERROR:
File "XXXX", line 5
    int(input(x//y))
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
File "XXXX", line 5
    int(input(x//y))
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
File "XXXX", line 5
    int(input(x//y))
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
File "XXXX", line 5
    int(input(x//y))
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
-- ERROR:
File "XXXX", line 5
    int(input(x//y))
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
-- ERROR:
File "XXXX", line 5
    int(input(x//y))
    ^
IndentationError: expected an indented block after 'if' statement on line 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 15:36:04)
-- CODE: 
x= int(input())
y=int(input())

if x % y == 0:

elif x % y == 0:
print("sim")
else:
print("nao")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
-- ERROR:
File "XXXX", line 6
    elif x % y == 0:
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
File "XXXX", line 6
    elif x % y == 0:
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
File "XXXX", line 6
    elif x % y == 0:
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
File "XXXX", line 6
    elif x % y == 0:
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
-- ERROR:
File "XXXX", line 6
    elif x % y == 0:
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
-- ERROR:
File "XXXX", line 6
    elif x % y == 0:
    ^
IndentationError: expected an indented block after 'if' statement on line 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 15:34:30)
-- CODE: 
x= int(input())
y=int(input())

elif x % y == 0:
print( x%y)
else:
print("nao")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
-- ERROR:
File "XXXX", line 4
    elif x % y == 0:
    ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
File "XXXX", line 4
    elif x % y == 0:
    ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
File "XXXX", line 4
    elif x % y == 0:
    ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
File "XXXX", line 4
    elif x % y == 0:
    ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
-- ERROR:
File "XXXX", line 4
    elif x % y == 0:
    ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
-- ERROR:
File "XXXX", line 4
    elif x % y == 0:
    ^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 15:35:33)
-- CODE: 
x= int(input())
y=int(input())
if x % y == 0:

elif x % y == 0:
print( x%y)
else:
print("nao")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
-- ERROR:
File "XXXX", line 5
    elif x % y == 0:
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
File "XXXX", line 5
    elif x % y == 0:
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
File "XXXX", line 5
    elif x % y == 0:
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
File "XXXX", line 5
    elif x % y == 0:
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
-- ERROR:
File "XXXX", line 5
    elif x % y == 0:
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
-- ERROR:
File "XXXX", line 5
    elif x % y == 0:
    ^
IndentationError: expected an indented block after 'if' statement on line 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 15:31:12)
-- CODE: 
x= int(input())
y=int(input())

if x % y == 0:
print("sim")
else:
print("nao")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1243
5
---- correct output:
3
nao
-- ERROR:
File "XXXX", line 5
    print("sim")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 2:
---- input:
432
3
---- correct output:
144
sim
-- ERROR:
File "XXXX", line 5
    print("sim")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
sim
-- ERROR:
File "XXXX", line 5
    print("sim")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 4:
---- input:
0
12
---- correct output:
0
sim
-- ERROR:
File "XXXX", line 5
    print("sim")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 5:
---- input:
239
12
---- correct output:
11
nao
-- ERROR:
File "XXXX", line 5
    print("sim")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
-- TEST CASE 6:
---- input:
9
2
---- correct output:
1
nao
-- ERROR:
File "XXXX", line 5
    print("sim")
    ^
IndentationError: expected an indented block after 'if' statement on line 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
